--- a/index.html
+++ b/index.html
@@ -4,28 +4,41 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Decodificador</title>
+
+	<!-- RESET CSS - USADO PARA RESETAR CSS -->
 	<link rel="stylesheet" type="text/css" href="reset.css">
+	
+	<!-- CUSTOM CSS - CUSTOMIZACOES PERSONALIZADAS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<link rel="stylesheet" type="text/css" href="debuger.css">
-
+	<!-- DEBUGER - USADO PARA DEBUGAR CSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="debuger.css"> -->
 
 </head>
-<body>
+<body class="light-mode">
 <div class="container-wrapper">
 	
 
  <!-- LOGO OU TITULO - NAVBAR -->
 <nav class="grid-nav">
-	<h1>Decodificador</h1>
+	<h1> <img class="svg-light" src="assets/logo.svg"> </h1>
 </nav>
 <!-- AREA MENSAGEM A SER CODIFICADA - ARTICLE -->
 <article class="grid-article">
-	<p> Article </p>
+	<!-- <p> Article </p> -->
+	<div class="input-article">
+		<textarea class="light-mode" id="txt-input" spellcheck="false" placeholder="digite aqui a mensagem a ser codificada ou cole aqui a mensagem a ser decodificada ..."></textarea>
+	</div>
+	<div class="btn btn-1">botao 1</div>
+	<div class="btn btn-2">botao 2</div>
 </article>
 <!-- AREA MENSAGEM CODIFICADA - ASIDE -->
 <aside class="grid-aside">
-	<p> Aside </p>
+	<!-- <p> Aside </p> -->
+	<div class="input-aside"> 
+		<textarea class="light-mode" id="txt-output" placeholder="teste" spellcheck="false"></textarea> 
+	</div>
+	<div class="btn btn-3">botao 3</div>
 </aside>
 <!-- AREA DADOS ADICIONAIS - FOOTER -->
 <footer class="grid-footer">
