--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 <article class="grid-article">
 	<!-- <p> Article </p> -->
 	<div class="input-article">
-		<textarea class="light-mode" id="txt-input" spellcheck="false" placeholder="digite aqui a mensagem a ser codificada ou cole aqui a mensagem a ser decodificada ..."> </textarea>
+		<textarea class="light-mode" id="txt-input" spellcheck="false" placeholder="digite aqui a mensagem para criptografar ou cole aqui a mensagem para descriptografar ..."> </textarea>
 	</div>
-	<div class="btn btn-1">botao 1</div>
-	<div class="btn btn-2">botao 2</div>
+	<div class="div-botoes div-btn-1"> <button type="button" class="btn btn-1">Criptografar</button> </div>
+	<div class="div-botoes div-btn-2"> <button type="button" class="btn btn-2">Descriptografar</button> </div>
 </article>
+
 <!-- AREA MENSAGEM CODIFICADA - ASIDE -->
 <aside class="grid-aside">
 	<!-- <p> Aside </p> -->
@@ -43,13 +44,8 @@
 		</div>
 		<!-- <textarea  class="light-mode" id="txt-output" spellcheck="false"></textarea>  -->
 	</div>
-	<div class="btn btn-3">botao 3</div>
+	<div class="div-botoes div-btn-3"> <button type="button" class="btn btn-3">Copiar</button> </div>
 </aside>
-<!-- AREA DADOS ADICIONAIS - FOOTER -->
-<footer class="grid-footer">
-	<p> Footer </p>
-</footer>
-
 
 
 
