--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
 
  <!-- LOGO OU TITULO - NAVBAR -->
 <nav class="grid-nav">
-	<h1> <img class="svg-light logo" src="assets/logo.svg"> </h1>
+	<h1> <img id="ico-logo" style="float: left;" class="svg-azul   gira " src="assets/logo.svg"> </h1>
+	<h1> <img id="ico-config" style="float: right;" class="svg-azul " src="assets/config.svg"> </h1>
+	<h1> <img id="ico-dark" style="float: right;" class="svg-azul " src="assets/dark-mode.svg"> </h1>
+	<h1> <img id="ico-light" style="float: right;" class="svg-azul " src="assets/light-mode.svg"> </h1>
 </nav>
+<!-- ---MODAL CONFIG--- -->
+<div class="modal">
+	<h1> <img class="svg-azul circulo" src="assets/circulo.svg"> </h1>
+	<h1> <img class="svg-vermelho circulo" src="assets/circulo.svg"> </h1>
+	<h1> <img class="svg-verde circulo" src="assets/circulo.svg"> </h1>
+</div>
+
+
 <!-- AREA MENSAGEM A SER CODIFICADA - ARTICLE -->
 <article class="grid-article">
 	<!-- <p> Article </p> -->
