Ajuste Layout Celular

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<p>Digite um texto que você deseja <br> criptografar ou descriptografar.</p>
 		</div>
 	<div class="input-aside"> 
-		<textarea id="txt-output" spellcheck="false"></textarea> 
+		<textarea id="txt-output" spellcheck="false" placeholder=""></textarea> 
 	</div>
 	<div class="div-botoes div-btn-3"> <button id="btn-cop" type="button" class="btn btn-3">Copiar</button> </div>
 </aside>
