--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class="input-aside"> 
 		<textarea id="txt-output" spellcheck="false" placeholder=""></textarea> 
 	</div>
-	<div class="div-botoes div-btn-3"> <button id="btn-cop" type="button" class="btn btn-3">Copiar</button> </div>
+	<div class="div-botoes div-btn-3"> <button id="btn-cop" type="button" class="btn btn-3" style="display:none;">Copiar</button> </div>
 </aside>
 
 
