03/05/22 -- 15:32 (Add links Github, Linkedin)

--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
 </nav>
 <!-- ---MODAL CONFIG--- -->
 <div id="conf-modal" class="modal" style="display: none;">
+	<div class="modal-ln1">
 	<h1> <img id="cor_azul" alt="Azul" 			class="svg-azul circulo" 	 src="assets/circulo.svg"> </h1>
 	<h1> <img id="cor_vermelho" alt="Vermelho"  class="svg-vermelho circulo" src="assets/circulo.svg"> </h1>
 	<h1> <img id="cor_verde" alt="Verde" 		class="svg-verde circulo"	 src="assets/circulo.svg"> </h1>
+	</div>
+	<div class="modal-ln2">
+	<h1> <img class="circulo" src="assets/skull.svg"><br></h1>
+	<p>Erwin G Stein</p>
+	</div>
+	<div class="modal-ln3">
+	<h1> <a href="https://github.com/erwin-hc" > <img class="circulo icones_svg svg-azul" src="assets/github.svg"> </a> </h1>
+	<h1> <a href="https://www.linkedin.com/in/erwin-guilherme-stein-74473138/"> <img class="circulo icones_svg svg-azul" src="assets/linkedin.svg"> </a> </h1>
+	</div>
 </div>
-
 
 <!-- AREA MENSAGEM A SER CODIFICADA - ARTICLE -->
 <article class="grid-article">
