--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<h1> <img id="cor_verde" alt="Verde" 		class="svg-verde circulo"	 src="assets/circulo.svg"> </h1>
 	</div>
 	<div class="modal-ln2">
-	<h1> <img class="circulo icones_svg" src="assets/skull.svg"><br></h1>
+	<h1> <img class="circulo icones_svg svg-azul" src="assets/skull.svg"><br></h1>
 	<p>Erwin G Stein</p>
 	</div>
 	<div class="modal-ln3">
